--- a/src/ui/css/ui.css
+++ b/src/ui/css/ui.css
@@ -286,6 +286,34 @@
 	}
 }
 
+/*my custom css*/
+.form-control, label {
+    font-size: 12px;
+}
+
+.react-datepicker__input-container{
+	border: none;
+	width: 100%;
+    min-height: 25px;
+    line-height: 1.6;
+    outline: 0;
+	font-size: 12px;
+}
+.react-datepicker__input-container input{
+	width: 100%;
+    min-height: 25px;
+    line-height: 1.6;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    outline: 0;
+	font-size: 12px;
+	padding: 5px 10px;
+}
+.react-datepicker__input-container input:focus{
+	border-color: #6db3fd;
+    box-shadow: 3px 3px 0 #6db3fd, -3px -3px 0 #6db3fd, -3px 3px 0 #6db3fd, 3px -3px 0 #6db3fd;
+}
 
 @keyframes rotate{
   from{
